Fix minor jumping issue with header

--- a/app/assets/stylesheets/transformation_admin/_mixins.scss
+++ b/app/assets/stylesheets/transformation_admin/_mixins.scss
@@ -45,6 +45,7 @@
   box-shadow: none;
   cursor: pointer;
   display: inline-block;
+  font-family: inherit;
   font-weight: bold;
   line-height: 26px;
   overflow: hidden;
